# csv_processor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  app_design.md  todo.md
.claude/commands/git/: commit.md
.github/workflows/: build_and_test.yml  publish.yml
samples/: sample.csv  sample2.csv
src/: analyzer.rs  config.rs  lib.rs  main.rs  parser.rs  reporter.rs  types.rs
src/dataframe/: aggregation.rs  columns.rs  loader.rs  mod.rs
src/frame/: error.rs  io.rs  mod.rs
src/scalar/: mod.rs
src/series/: array.rs  mod.rs
tests/: aggreagation_tests.rs  columns_tests.rs  config_tests.rs  frame_tests.rs  parser_tests.rs
