[package]
name = "csv_processor"
version = "0.1.0"
edition = "2021"
description = "A fast command-line CSV analysis tool with automatic type inference and comprehensive statistics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kkruglik/csv_processor"
homepage = "https://github.com/kkruglik/csv_processor"
documentation = "https://docs.rs/csv_processor"
keywords = ["csv", "analytics", "statistics", "data", "cli"]
categories = ["command-line-utilities", "data-structures"]
authors = ["Kirill Kruglikov <kirillkruglikov@gmail.com>"]
readme = "README.md"

[dependencies]
csv = "1.3"
