[package]
name = "csv_processor"
version = "0.1.1"
edition = "2021"
description = "A fast command-line CSV analysis tool with automatic type inference and comprehensive statistics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kkruglik/csv_processor"
homepage = "https://github.com/kkruglik/csv_processor"
documentation = "https://docs.rs/csv_processor"
keywords = ["csv", "analytics", "statistics", "data", "cli"]
categories = ["command-line-utilities", "data-structures"]
authors = ["Kirill Kruglikov <kirillkruglikov@gmail.com>"]
readme = "README.md"

[[bin]]
name = "csv_processor"
path = "src/bin/csv_processor.rs"

[lib]
name = "csv_processor"
path = "src/lib.rs"

[dependencies]
csv = "1.3"
serde_json = "1.0.143"

[package.metadata.release]
sign-commit = false
sign-tag = false
pre-release-commit-message = "Release {{version}}"
tag-message = "Release {{version}}"
tag-name = "v{{version}}"
